#
# openSUSE Build Service 2.4.3
#

Updaters from any OBS 2.4 release can just ugrade the packages
and restart all services. Updaters from former releases should
read the README.UPDATERS file.

Note: we fixed also an update problem of the ruby package

Feature backports:
==================

* none

Changes:
========

* api: support default targets on OBS 2.5 remote instances using defined architecture
       per repositories

Bugfixes:
=========

* webui: fix for user editing could have dropped admin role
* api: documentation fixes
* api: fix storage of Download on Demand path in API
       (Note: this is still an experimental feature likely to change)
* api: crash fixed when request status includes repository pathes to remote instances
* backend: fix scanprjbinaries event handling
* backend: fixed caching for remote source handling in some cases
* backend: undelete of a project does restore the signkey now
* backend: fixed macro block parsing when using %if statements 