@@ -27,6 +27,7 @@ Bugfixes:
 * api: fix storage of Download on Demand path in API
        (Note: this is still an experimental feature likely to change)
 * api: crash fixed when request status includes repository pathes to remote instances
+* api: allow request state change to approved only from new/review states (regression fix)
 * backend: fix scanprjbinaries event handling
 * backend: fixed caching for remote source handling in some cases
 * backend: undelete of a project does restore the signkey now
